# anythingllm-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  anythingllm_mcp.py  generate_mcp_bridge_image.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
tests/: test_anythingllm_mcp.py
